repos/makepy/contents/test/fail/Version.rules
# python 3
# python 3.1+
# python 3.1 - 3.5 # VINTAGE
python 1.1 - 1.7 # VINTAGE

all:
    print("Succeed")
